# data_utility

./: .env-example  .gitignore  README.md  ReadMe.md  alembic.ini  menu.txt  pyproject.toml  ruff.toml
data_util/: __init__.py  __main__.py  create_actor_messages.py  create_db_records.py  create_people_messages.py  create_queue_records.py  create_records.py  create_reference_message.py
data_util/connections/: rabbit_connection.py
data_util/model/: data_operations.py  kantin_models.py
data_util/providers/: FoodTypeProvider.py
data_util/providers/supportingData/: dish_types.csv
data_util/tests/: test_config.env  test_create_actor_message.py  test_create_reference_message.py
migrations/versions/: 9c1b0e7ff143_add_menu_category_id_column_to_menus_.py
